[tool.poetry]
name = "whin_reenvisioned"
version = "0.1.0"
description = "A re-envisioned WHIN API for learning."
authors = ["Kevin Amstutz <kevin@amstutz.io>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.68.1"}
pandas = "^1.3.3"
aiosql = "^3.3.1"
fastapi-responses = "^0.2.1"
cyksuid = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
